fixed spacing for result form

--- a/src/assets/Styles/Components/LoanResult.scss
+++ b/src/assets/Styles/Components/LoanResult.scss
@@ -29,6 +29,7 @@
             justify-content: space-evenly;
             font-size: 14px;
             color: $defaultFontColor;
+            width: 100%;
         }
     }
 }
